[package]
name = "recipnps"
version = "0.1.0"
edition = "2021"
authors = ["Jingnan Shi <jnshi@mit.edu>"]

[dependencies]
nalgebra = {version="0.29", default-features=true, features=['rand']}
roots = { git = "https://github.com/jingnanshi/roots" }
rand = '0.8.4'

[lib]
name = "recipnps"
path = "src/lib.rs"
